--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,18 @@
 {
   "manifest_version": 2,
   "name": "Bookmark",
-	"version": "1.0.0",
+  "version": "1.0.0",
   "description": "Quickly bookmark all tabs in the current window.",
   "icons": {
-  	"16": "assets/bookmark_16.png",
-  	"48": "assets/bookmark_48.png",
-  	"128": "assets/bookmark_128.png"
+    "16": "assets/bookmark_16.png",
+    "48": "assets/bookmark_48.png",
+    "128": "assets/bookmark_128.png"
   },
-	"browser_action": {},
-	"author": "Peter Han",
-	"background": {
-		"scripts": ["background.js"],
-		"persistent": false
-	},
-	"permissions": [
-		"bookmarks",
-		"tabs"
-	]
+  "browser_action": {},
+  "author": "Peter Han",
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "permissions": ["bookmarks", "tabs"]
 }
