--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Bookmark",
   "version": "1.0.0",
   "description": "Bookmark all tabs in the current window.",
@@ -8,11 +8,10 @@
     "48": "assets/bookmark_48.png",
     "128": "assets/bookmark_128.png"
   },
-  "browser_action": {},
+  "action": {},
   "author": "Peter Han",
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "service_worker": "background.js"
   },
   "permissions": ["bookmarks", "tabs"]
 }
